Massive re-org, combining blog and resume.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Michael R. Fleet
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://resume.f1337.com" # the base hostname & protocol for your site
+url: "http://michael.f1337.com" # the base hostname & protocol for your site
 github_username: f1337
 linkedin_path: in/f1337 # your linkedin url, without the leading www.linkedin.com/
 email: resume@f1337.us
